fix layout on iphone5

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -7,6 +7,10 @@ h1 {
     line-height: 1em;
     display: inline-block;
     margin: 1em;
+    
+    @media (max-width: 380px) {
+        margin: 0.6em 0;
+    }
 }
 .container {
     width: 100%;
